# GemiClawDex

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.en.md  README.md
.devcontainer/: devcontainer.json
.gcd/skills/architecture-review/: SKILL.md
.gcd/skills/code-review/: SKILL.md
.gcd/skills/documentation-review/: SKILL.md
.gcd/skills/git-workflow/: SKILL.md
.gcd/skills/performance-analysis/: SKILL.md
.gcd/skills/refactoring/: SKILL.md
.gcd/skills/security-audit/: SKILL.md
.gcd/skills/systematic-debugging/: SKILL.md
.gcd/skills/tdd/: SKILL.md
.gemi-clawdex/: active-provider.txt  providers.conf
.gemi-clawdex/commands/: review.toml
.github/workflows/: ci.yml
crates/gemi-clawdex-cli/: Cargo.toml
crates/gemi-clawdex-cli/src/: main.rs
crates/gemi-clawdex-core/: Cargo.toml
crates/gemi-clawdex-core/src/: agent.rs  app.rs  commands.rs  config.rs  instructions.rs  lib.rs  output.rs  prompt.rs  providers.rs  session.rs  skills.rs  tools.rs  trust.rs  workspace.rs
docs/: architecture.md  index.html  script.js  style.css
docs/chapters/: agents-md-workshop.html  ch11.html  comp.html  context-eng.html  eval-observability.html  extensions.html  home.html  learn.html  manifest.json  prompt.html  refs.html  roadmap.html  state.html  strategy.html  tools.html  trustmap.html  u1.html  verification-loops.html
exercises/: README.md
exercises/01-first-agent/: README.md
exercises/02-write-agents-md/: README.md
exercises/03-context-injection/: README.md
exercises/04-custom-command/: README.md
exercises/05-skill-creation/: README.md
(+14 files in other folders)
