[package]
name = "gcd"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[[bin]]
name = "gcd"
path = "src/main.rs"

[dependencies]
gemi-clawdex-core = { path = "../gemi-clawdex-core" }

clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
